--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799718.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_36808718_Subscription_L-320x200.jpg">大陆男子用牙膏画人像 关灯后令人惊叹</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798917.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193097821-320x200.jpg">武汉肺炎无法排除人传人 美国务院警告防疫</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
@@ -45,6 +45,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799432.md#1">《新闻拍案惊奇》观众Q</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799572.md#1">台举行大选后首次军事操演 以共军为假想敌</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799840.md#1">广东肇庆5车追尾 一车起火五5人死亡</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799718.md#1">大陆男子用牙膏画人像 关灯后令人惊叹</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799721.md#1">一塑料船在长江翻沉 5人下落不明</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799626.md#1">北京一公司申请“武大郎”商标被拒 网民热议</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/17/n11799652.md#1">大陆去年GDP增长6.1% 创29年最低</a><br>
@@ -56,7 +57,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798667.md#1">《好莱坞往事》大陆撤档 导演昆汀首次回应</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798303.md#1">陕西男子失踪21年 知情人：油企打死多人</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798732.md#1">【热点互动】第一阶段协议改变中美贸易模式</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798917.md#1">武汉肺炎无法排除人传人 美国务院警告防疫</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798885.md#1">为吴花燕募捐百万转交两万？医院：没收到</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797867.md#1">2019年 遭中共迫害的社会精英人士</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798702.md#1">华盛顿加大力度 促台积电在美生产芯片</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,981,983 人
+- 共 349,986,186 人
 ```
 </strong>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/30/n11754554.md#1">新元赋——退党中心2020新年寄语</a><br>
